# listrev

./: CMakeLists.txt
data/: commtest.data.xml  ctSession.data.xml  listrev.data.xml  lrSession.data.xml
plugins/: ListReverser.cpp  ListReverser.hpp  RandomDataListGenerator.cpp  RandomDataListGenerator.hpp  ReversedListValidator.cpp  ReversedListValidator.hpp
schema/listrev/: listrev.schema.xml
